src/test/fun-test/semantic/MultipleFieldDecl.java.err
Semantic error: multiple declaration of field a, line 6, pos 14
