src/test/fun-test/semantic/MultipleFieldDecl.java
class Main {
    int a;

    void main() {}

    int a = 5;
}